--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header container">
             <a href="./">
                 <img src="./img/bikcraft.svg" alt="Bikcraft">
             </a>
@@ -30,7 +30,7 @@
     </header>
 
     <main class="introducao-bg">
-        <div class="introducao">
+        <div class="introducao container">
             <div class="introducao-conteudo">
                 <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
                 <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -41,6 +41,34 @@
             </div>
         </div>
     </main>
+
+    <article class="bicicletas-lista">
+        <h2 class="font-1-xxl container">escolha a sua<span class="cor-p1">.</span></h2>
+
+        <ul>
+            <li>
+                <a href="./bicicletas/magic.html">
+                    <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
+                    <h3 class="font-1-xl">Magic Might</h3>
+                    <span class="font-2-m cor-8">R$ 2499</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicletas/nimbus.html">
+                    <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
+                    <h3 class="font-1-xl">Nimbus Stark</h3>
+                    <span class="font-2-m cor-8">R$ 4000</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bicicletas/nebula.html">
+                    <img src="/img/bicicletas/nebula-home.jpg" alt="Bicicleta Branca">
+                    <h3 class="font-1-xl">Nebula Cosmic</h3>
+                    <span class="font-2-m cor-8">R$ 3999</span>
+                </a>
+            </li>
+        </ul>
+    </article>
 
 </body>
 </html>
