--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -100,7 +100,6 @@
 
     <section class="parceiros" aria-label="Nossos Parceiros">
         <h2 class="font-1-xxl container">nossos parceiros<span class="cor-p1">.</span></h2>
-
         <ul>
             <li><img src="img/parceiros/caravan.svg" alt="caravan"></li>
             <li><img src="img/parceiros/ranek.svg" alt="ranek"></li>
@@ -111,7 +110,19 @@
             <li><img src="img/parceiros/wildbeast.svg" alt="wildbeast"></li>
             <li><img src="img/parceiros/surfbot.svg" alt="surfbot"></li>
         </ul>
+    </section>
 
+    <section class="depoimento" aria-label="Depoimento">
+        <div>
+            <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta bikcraft">
+        </div>
+
+        <div class="depoimento-conteudo">
+            <blockquote class="font-1-xl cor-p5">
+                <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+            </blockquote>
+            <span class="font-1-m-b cor-p4">Ana Júlia</span>
+        </div>
     </section>
 
 </body>
