--- a/index.html
+++ b/index.html
@@ -155,5 +155,43 @@
         </div>
     </article>
 
+    <footer class="footer-bg">
+        <div class="footer container">
+            <img src="./img/bikcraft.svg" alt="Bikcraft">
+            <div class="footer-contato">
+                <h3 class="font-2-l-b cor-0">Contato</h3>
+                <ul class="cor-5 font-2-m">
+                    <li><a href="tell:+5587998033393">+55 87 9999-9999</a></li>
+                    <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                    <li>Rua Ali Perto, 69 - Tangamadapio</li>
+                    <li>Brasil - Pernambuco</li>
+                </ul>
+                <div class="footer-redes">
+                    <a href="./">
+                        <img src="./img/redes/instagram.svg" alt="instagram">
+                    </a>
+                    <a href="./">
+                        <img src="./img/redes/facebook.svg" alt="facebook">
+                    </a>
+                    <a href="./">
+                        <img src="./img/redes/youtube.svg" alt="youtube">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-informacoes">
+                <h3 class="font-2-l-b cor-0">Informações</h3>
+                <nav class="font-1-m cor-5">
+                    <ul>
+                    <li><a href="./bicicletas.html">Bicicletas</a></li>
+                    <li><a href="./seguros.html">Seguros</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                    <li><a href="./termos.html">Termos e Condições</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
