--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft - Bicicletas Elétricas</title>
-    <link rel="stylesheet" href="/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+    <link rel="preload" href="./css/style.css" as="style">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="./img/bikcraft.svg" alt="Bikcraft">
+                <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
             </a>
 
             <nav aria-label="primaria">
@@ -37,7 +39,7 @@
                 <a class="botao" href="./bicicletas.html">Escolha a sua</a>
             </div>
             <div>
-                <img src="./img/fotos/introducao.jpg" alt="bicicleta elétrica preta.">
+                <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="bicicleta elétrica preta.">
             </div>
         </div>
     </main>
@@ -80,7 +82,7 @@
 
                 <div class="tecnologia-vantagens">
                     <div>
-                        <img src="./img/icones/eletrica.svg" alt="">
+                        <img src="./img/icones/eletrica.svg" width="" height="" alt="">
                         <h3 class="font-1-m cor-0">Motor Elétrico</h3>
                         <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
                     </div>
